--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,11 @@ button {
 }
 
 header#main-header{
-  background: #fff;
+  background: black;
   height: 49px;
-  box-shadow: 0 1px 1px rgba( 0, 0 , 0, 0.25);
+  box-shadow: 0 1px 1px rgb(250, 250, 250);
+  position: relative;
+  z-index: 1;
 }
 
 header#main-header .content{
@@ -45,7 +47,7 @@ header#main-header nav ul li{
   display: flex;
   align-items: center;
   font-size: 13px;
-  color: #667580;
+  color: #fff;
   font-weight: bold;
   margin-left: 30px;
 }
@@ -56,6 +58,7 @@ header#main-header nav ul li:first-child{
 
 header#main-header nav ul li img{
   margin-right: 7px;
+  color: #fff;
 }
 
 header#main-header div.side{
@@ -80,7 +83,7 @@ header#main-header div.side img{
 }
 
 header#main-header div.side button{
-  background: #3bb9e3;
+  background: #ffff00;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -89,7 +92,91 @@ header#main-header div.side button{
   font-weight: bold;
   font-size: 14px;
   border: 0;
-  color: #fff;
+  color: black;
   border-radius: 16px;
 }
 
+div.banner {
+  height: 380px;
+  width: 100%;
+  background:  darkgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+}
+
+div.bar {
+  height: 59px;
+  background: black;
+  box-shadow: 0 1px 3px rgb(250, 250, 250);
+}
+
+div.bar .content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 285px;
+  height: 100%;
+}
+
+div.bar ul{
+  display: flex;
+  list-style: none;
+  height: 100%;
+}
+
+div.bar .content ul li{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 15px;
+  position: relative;
+}
+
+div.bar .content ul li.active::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: #ffff00;
+}
+
+div.bar .content ul li span{
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+div.bar .content ul li strong{
+  color:#fff;
+  font-size: 18px;
+  font-weight: bold; 
+  margin-top: 2px;
+}
+
+div.bar .content ul li.active strong {
+  color: #ffff00;
+}
+
+div.bar .content .actions {
+  display: flex;
+}
+
+div.bar .content .actions button {
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 34px;
+  width: 90px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #ffff00;
+  border-radius: 16px;
+  border: 2px solid #ffff00;
+  margin-right: 20px;
+}
